Simplify bgp.rib.spi.Peer
The RIB does not care about actual types of routes: the only consistency
we would need to RIBSupport/ActualBestPathRoutes type arguments, but
that is already hidden behind RouteEntryDependenciesContainer.

Ditch the generics, making everyone's life a lot simpler -- cascading
all across the components.

JIRA: BGPCEP-1109
Change-Id: I7a490824dfae8090274a941ce71040a8f5e802b8
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>